Archive2/01/b7423ee39958fe/output
main.cpp:23:5: error: static_assert failed "!"
    static_assert( check<1,2,3,41,42,43>(999), "!" );
    ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
